# gayming

./: Cargo.toml  README.md
art/: blenvy.blend  blenvy.blend1
assets/: registry.json
assets/blueprints/: Player.glb  Ramp.glb
assets/levels/: World.assets.ron  World.glb  World.meta.ron
assets/materials/: Dots Stroke.glb  Material.001.glb  Material.002.glb  Material.glb
src/: main.rs
src/mesh_markers/: mod.rs
src/player_controller/: camera.rs  components.rs  mod.rs
