[package]
name = "gayming"
version = "0.1.0"
edition = "2024"

[dependencies]
avian3d = { version = "0.2.1", features = ["enhanced-determinism"] }
bevy = { version = "0.15.2", features = ["wayland"] }
bevy-inspector-egui = "0.28.1"
bevy_egui = "0.31.0"
blenvy = { git="https://github.com/jwright159/Blenvy.git" }
